# BrahminyKite

./: .dockerignore  .gitignore  BRANCHES.md  Dockerfile  HELP.md  README.md  VERIFIER_DESIGN.md  alembic.ini  philophicalbasis.md  pyproject.toml  readsources.md  synDataNotbad.md  test_verifier.py  verifier.py
.github/workflows/: python-package.yml
chil/: __init__.py
chil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chil/caching/: README.md  __init__.py  client.py  config.py  decorators.py  invalidation.py  monitoring.py  patterns.py  pubsub.py  serializers.py  session.py
chil/consensus/: README.md  compile_protos.sh
chil/env/: README.md  __init__.py  api.py  client.py  run_server.py  text_environment.py
chil/feedback/: __init__.py  analyzer.py  collector.py
chil/framework/: __init__.py  consensus_types.py
chil/integrations/: __init__.py  academic.py  fact_checking.py  logic.py  nlp.py
chil/monitoring/: README.md  __init__.py
chil/networking/: __init__.py  compile_protos.sh  consensus.proto  discovery.py  protocol.py  transport.py
chil/persistence/: README.md  SUMMARY.md  monitoring.py
chil/security/: __init__.py  certificates.py  client.py  config.py  (+6 more)
docs/: README_unified.md  README_verifier.md  complete_research_overview.md  constitutional_ai_comparison.md  design_notes.md  expansion_plan.md  framework_organization.md  llm_formal_integration.md  plan.md  server.md  things_to_do_tmrw.md  training_architecture.md  unified_framework_plan.md
examples/: example_usage.py  unified_example.py
helm/: install-helm.sh
scripts/: check-status.sh  check_certs.py  compile_all_protos.sh  dev-setup.sh  generate_certs.py  import-dashboards.sh  run_verifier.py  security_report.py
test_env/: pyvenv.cfg
tests/: __init__.py  run_tests.py
verifier/: __init__.py
(+156 files in other folders)
